--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,50 @@
+header {
+
+    background-color: #15142b;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .section-header {
+    background-image: url('path/to/your/image.jpg');
+    background-size: cover; /* Adjust as needed */
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  /* CSS for Search Bar */
+  .search-bar {
+    background-color: #f2f2f2;
+    padding: 10px;
+    text-align: center;
+  }
+
+  /* CSS for Section with Two Columns */
+  .section {
+    display: flex;
+    justify-content: space-between;
+    margin: 1px;
+  }
+
+  .column1 {
+    margin-bottom: ;
+    width: 48%;
+    background-color: #c97474;
+    padding: 10px;
+  }
+  .column2 {
+    width: 48%;
+    background-color: #92a159;
+    padding: 10px;
+  }
+
+
+  /* CSS for Footer */
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
 
