--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,31 @@
 header {
-
-    background-color: #15142b;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-
-  .section-header {
-    background-image: url('path/to/your/image.jpg');
-    background-size: cover; /* Adjust as needed */
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-
-  /* CSS for Search Bar */
-  .search-bar {
-    background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
-  }
-
-  /* CSS for Section with Two Columns */
-  .section {
-    display: flex;
-    justify-content: space-between;
-    margin: 1px;
-  }
+  background-image: url('pikachu.png');
+  background-color: #4E47DB;
+  color: #3DF804;
+  padding: 40px;
+  text-align: center;
+}
+.header-image {
+  background-image: url('pikachu.png');
+  background-size: cover; /* Adjust as needed */
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+/* CSS for Search Bar */
+.search-bar {
+  background-color: #F2F2F2;
+  padding: 10px;
+  text-align: center;
+}
+/* CSS for Section with Two Columns */
+.section {
+  display: flex;
+  justify-content: space-between;
+  margin: 1px;
+}
 
   .column1 {
-    margin-bottom: ;
+    /* margin-bottom: ; */
     width: 48%;
     background-color: #c97474;
     padding: 10px;
