--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,42 @@
+
+
+
 header {
+
+
+    background-color: #15142b;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .section1 {
+    background-image: url("./assets/images/AnimeGrasslands.jpg");
+  }
+
+  .section-header {
+    background-image: url();
+    background-size: cover; /* Adjust as needed */
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  /* CSS for Search Bar */
+  .search-bar {
+        background-color: #f2f2f2;
+    padding: 10px;
+    text-align: center;
+  }
+
+  /* CSS for Section with Two Columns */
+  .section {
+    display: flex;
+    justify-content: space-between;
+    margin: 1px;
+  }
+
+  .column1 {
+=======
   background-image: url('pikachu.png');
   background-color: #4E47DB;
   color: #3DF804;
@@ -25,7 +63,6 @@ header {
 }
 
   .column1 {
-    /* margin-bottom: ; */
     width: 48%;
     background-color: #c97474;
     padding: 10px;
@@ -36,8 +73,6 @@ header {
     padding: 10px;
   }
 
-
-  /* CSS for Footer */
   footer {
     background-color: #333;
     color: #fff;
