Added notes and updated css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 header {
 
     background-color: #15142b;
-    color: #fff;
+    color: #3ad612;
     padding: 20px;
     text-align: center;
   }
@@ -28,7 +28,7 @@ header {
   }
 
   .column1 {
-    margin-bottom: ;
+    margin-bottom: 0px ;
     width: 48%;
     background-color: #c97474;
     padding: 10px;
