--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
 
 
-
+/* Added shadow text to make text more clear */
 header {
-
-
-    background-color: #15142b;
-    color: #3ad612;
-    padding: 20px;
+    background-color: white;
+    color: rgb(255, 255, 255);
+    padding: 10px;
     text-align: center;
+    font-size: xx-large;
+    text-shadow: 5px 5px 5px rgb(0, 0, 0);
+    
+    
   }
 
   .section1 {
