--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,57 @@
-
-
-
+/* Added shadow text to make text more clear */
 header {
 
-    background-color: #15142b;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
 
-  .section1 {
-    background-image: url("./assets/images/AnimeGrasslands.jpg");
-  }
+  background-color: #15142b;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  font-size: xx-large;
+  text-shadow: 5px 5px 5px rgb(0, 0, 0);
+  
+  
+}
 
-  .section-header {
-    background-image: url();
-    background-size: cover; /* Adjust as needed */
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
+.section1 {
+background-image: url("./assets/images/AnimeGrasslands.jpg");
+}
 
-  /* CSS for Search Bar */
-  .search-bar {
-        background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
-  }
+.section-header {
+background-image: url();
+background-size: cover; /* Adjust as needed */
+background-repeat: no-repeat;
+background-position: center center;
+}
 
-  /* CSS for Section with Two Columns */
-  .section {
-    display: flex;
-    justify-content: space-between;
-    margin: 1px;
-  }
+/* CSS for Search Bar */
+.search-bar {
+    background-color: #f2f2f2;
+padding: 10px;
+text-align: center;
+}
 
-  .column1 {
-    width: 48%;
-    background-color: #c97474;
-    padding: 10px;
-  }
-  .column2 {
-    width: 48%;
-    background-color: #92a159;
-    padding: 10px;
-  }
+/* CSS for Section with Two Columns */
+.section {
+display: flex;
+justify-content: space-between;
+margin: 1px;
+}
 
+.column1 {
+margin-bottom: 0px;
+width: 48%;
+background-color: #c97474;
+padding: 10px;
+}
+.column2 {
+width: 48%;
+background-color: #92a159;
+padding: 10px;
+}
 
-  /* CSS for Footer */
-  footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-
+footer {
+background-color: #f5e400;
+color: #000000;
+padding: 20px;
+text-align: center;
+}
