--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ background-position: center center;
 
 /* CSS for Search Bar */
 .search-bar {
-    background-color: #f2f2f2;
+background-color: #f2f2f2;
 padding: 10px;
 text-align: center;
 
@@ -37,7 +37,6 @@ margin: 1px;
 }
 
 .column1 {
-
 margin-bottom: 0px;
 width: 48%;
 background-color: #c97474;
@@ -54,4 +53,9 @@ background-color: #f5e400;
 color: #000000;
 padding: 20px;
 text-align: center;
+position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
+/* Fixed the footer to stay at the bottom of the page
