--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 /* Added shadow text to make text more clear */
-header {
+.header {
   color: #bf2828;
   padding: 10px;
   text-align: center;
   font-size: xx-large;
   text-shadow: 1px 2px 2px rgb(46, 8, 8);
   opacity: 100%
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0px 0px 10px;
+  margin-bottom: 0px 0px 10px;
 }
 
 .section-header {
