--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,11 @@ footer {
   color: #000000;
   /* padding: 20px; */
   text-align: center;
-  position: absolute;
+  position: fixed; bottom:0; left:0 ; right:0;  height: 2.5rem;
+
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  /* height: 2.5rem; */
 }
 
 /* Fixed the footer to stay at the bottom of the page
