--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
   text-align: center;
   font-size: xx-large;
   text-shadow: 1px 2px 2px rgb(46, 8, 8);
-  opacity: 100%
+  opacity: 100%;
   margin-top: 0px 0px 10px;
   margin-bottom: 0px 0px 10px;
 }
@@ -37,6 +37,7 @@
   margin-bottom: 10px;
 }
 
+
 /* CSS for Section with Two Columns */
 .section {
   display: flex;
@@ -45,17 +46,6 @@
   margin-bottom: 10px;
 }
 
-.column1 {
-  margin-bottom: 0px;
-  width: 47%;
-  background-color: #c97474;
-  padding-right: 10px;
-}
-.column2 {
-  width: 47%;
-  background-color: #92a159;
-  padding: 10px;
-}
 
 footer {
   background-color: #f5e400;
